--- a/QRScanner/app/src/main/res/layout/activity_main.xml
+++ b/QRScanner/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:keepScreenOn="true"
-    tools:context=".MainActivity">
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:id="@+id/main_layout"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:keepScreenOn="true"
+  tools:context=".MainActivity">
 
   <com.auroid.qrscanner.camera.CameraSourcePreview
-      android:id="@+id/camera_preview"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent">
+    android:id="@+id/camera_preview"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-      <include layout="@layout/camera_preview_overlay" />
+    <com.auroid.qrscanner.camera.GraphicOverlay
+      android:id="@+id/camera_preview_graphic_overlay"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent" />
 
   </com.auroid.qrscanner.camera.CameraSourcePreview>
 
   <include
-      layout="@layout/bottom_action_bar"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_gravity="bottom" />
+    layout="@layout/bottom_action_bar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom" />
+
+  <com.google.android.material.chip.Chip
+    android:id="@+id/guide_chip"
+    style="@style/Widget.MaterialComponents.Chip.Entry"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="48dp"
+    android:layout_gravity="top|center_horizontal"
+    android:checkable="false"
+    android:clickable="false"
+    android:fontFamily="sans-serif"
+    android:textColor="@color/white"
+    android:textSize="@dimen/bottom_prompt_chip_text_size"
+    android:visibility="gone"
+    app:chipCornerRadius="@dimen/bottom_prompt_chip_corner_radius"
+    app:chipSurfaceColor="@color/dark"
+    app:closeIconVisible="false" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
