--- a/QRScanner/app/src/main/res/layout/bottom_action_bar.xml
+++ b/QRScanner/app/src/main/res/layout/bottom_action_bar.xml
@@ -1,50 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/top_action_bar_height"
-    android:paddingStart="@dimen/top_action_bar_padding_horizontal"
-    android:paddingEnd="@dimen/top_action_bar_padding_horizontal"
-    android:background="@drawable/top_action_bar_scrim">
+<RelativeLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:layout_width="match_parent"
+  android:layout_height="@dimen/top_action_bar_height"
+  android:background="@drawable/top_action_bar_scrim"
+  android:paddingStart="@dimen/top_action_bar_padding_horizontal"
+  android:paddingEnd="@dimen/top_action_bar_padding_horizontal">
 
   <ImageView
-      android:id="@+id/settings_button"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_alignParentEnd="true"
-      android:padding="@dimen/top_action_button_padding"
-      android:contentDescription="@string/cd_settings_button"
-      android:background="?selectableItemBackgroundBorderless"
-      app:srcCompat="@drawable/ic_settings_vd_white_24" />
+    android:id="@+id/settings_button"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentEnd="true"
+    android:background="?selectableItemBackgroundBorderless"
+    android:contentDescription="@string/cd_settings_button"
+    android:padding="@dimen/top_action_button_padding"
+    app:srcCompat="@drawable/ic_settings_vd_white_24" />
 
   <ImageView
-      android:id="@+id/history_button"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_toStartOf="@id/settings_button"
-      android:padding="@dimen/top_action_button_padding"
-      android:contentDescription="@string/cd_history_button"
-      android:background="?selectableItemBackgroundBorderless"
-      app:srcCompat="@drawable/ic_history_white_24dp" />
+    android:id="@+id/history_button"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_toStartOf="@id/settings_button"
+    android:background="?selectableItemBackgroundBorderless"
+    android:contentDescription="@string/cd_history_button"
+    android:padding="@dimen/top_action_button_padding"
+    app:srcCompat="@drawable/ic_history_white_24dp" />
 
   <ImageView
-      android:id="@+id/flash_button"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_toStartOf="@id/history_button"
-      android:padding="@dimen/top_action_button_padding"
-      android:contentDescription="@string/cd_flash_button"
-      android:background="?selectableItemBackgroundBorderless"
-      app:srcCompat="@drawable/camera_flash" />
+    android:id="@+id/flash_button"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_toStartOf="@id/history_button"
+    android:background="?selectableItemBackgroundBorderless"
+    android:contentDescription="@string/cd_flash_button"
+    android:padding="@dimen/top_action_button_padding"
+    app:srcCompat="@drawable/camera_flash" />
 
   <ImageView
-      android:id="@+id/gallery_button"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_alignParentStart="true"
-      android:padding="@dimen/top_action_button_padding"
-      android:contentDescription="@string/cd_gallery_button"
-      android:background="?selectableItemBackgroundBorderless"
-      app:srcCompat="@drawable/ic_photo_library_vd_white_24" />
+    android:id="@+id/gallery_button"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentStart="true"
+    android:background="?selectableItemBackgroundBorderless"
+    android:contentDescription="@string/cd_gallery_button"
+    android:padding="@dimen/top_action_button_padding"
+    app:srcCompat="@drawable/ic_photo_library_vd_white_24" />
 
 </RelativeLayout>
