--- a/QRScanner/app/src/main/res/layout/top_action_bar.xml
+++ b/QRScanner/app/src/main/res/layout/top_action_bar.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/top_action_bar_height"
-    android:paddingStart="@dimen/top_action_bar_padding_horizontal"
-    android:paddingEnd="@dimen/top_action_bar_padding_horizontal"
-    android:background="@drawable/top_action_bar_scrim">
+<RelativeLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:layout_width="match_parent"
+  android:layout_height="@dimen/top_action_bar_height"
+  android:background="@drawable/top_action_bar_scrim"
+  android:paddingStart="@dimen/top_action_bar_padding_horizontal"
+  android:paddingEnd="@dimen/top_action_bar_padding_horizontal">
 
   <ImageView
-      android:id="@+id/close_button"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_gravity="start"
-      android:padding="@dimen/top_action_button_padding"
-      android:contentDescription="@string/cd_close_button"
-      app:srcCompat="@drawable/ic_close_vd_white_24" />
+    android:id="@+id/close_button"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="start"
+    android:contentDescription="@string/cd_close_button"
+    android:padding="@dimen/top_action_button_padding"
+    app:srcCompat="@drawable/ic_close_vd_white_24" />
 
   <ImageView
-      android:id="@+id/photo_library_button"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_alignParentEnd="true"
-      android:padding="@dimen/top_action_button_padding"
-      android:contentDescription="@string/cd_gallery_button"
-      app:srcCompat="@drawable/ic_photo_library_vd_white_24" />
+    android:id="@+id/photo_library_button"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentEnd="true"
+    android:contentDescription="@string/cd_gallery_button"
+    android:padding="@dimen/top_action_button_padding"
+    app:srcCompat="@drawable/ic_photo_library_vd_white_24" />
 
 </RelativeLayout>
