--- a/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
+++ b/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
@@ -8,6 +8,13 @@
   android:fitsSystemWindows="true"
   tools:context=".BarcodeResultActivity">
 
+  <include
+    android:id="@+id/top_action_bar"
+    layout="@layout/top_action_bar"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/top_action_bar_height"
+    app:layout_constraintTop_toTopOf="parent" />
+
   <TextView
     android:id="@+id/barcode_result"
     android:layout_width="0dp"
@@ -25,7 +32,7 @@
     app:layout_constraintBottom_toTopOf="@id/ib_copy"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    app:layout_constraintTop_toBottomOf="@id/top_action_bar" />
 
   <ImageButton
     android:id="@+id/ib_copy"
