--- a/QRScanner/app/src/main/res/layout/activity_scan_history.xml
+++ b/QRScanner/app/src/main/res/layout/activity_scan_history.xml
@@ -8,6 +8,13 @@
   android:layout_height="match_parent"
   tools:context=".ScanHistoryActivity">
 
+  <include
+      android:id="@+id/top_action_bar"
+      layout="@layout/top_action_bar"
+      android:layout_width="match_parent"
+      android:layout_height="@dimen/top_action_bar_height"
+      app:layout_constraintTop_toTopOf="parent" />
+
   <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/recyclerview"
     android:layout_width="0dp"
@@ -17,7 +24,7 @@
     app:layout_constraintBottom_toTopOf="@+id/text_guide"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/top_action_bar"
     tools:listitem="@layout/recyclerview_item" />
 
   <TextView
