--- a/QRScanner/app/src/main/res/layout/activity_settings.xml
+++ b/QRScanner/app/src/main/res/layout/activity_settings.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:fitsSystemWindows="true">
 
+  <include
+    android:id="@+id/top_action_bar"
+    layout="@layout/top_action_bar"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/top_action_bar_height"
+    app:layout_constraintTop_toTopOf="parent" />
+
   <FrameLayout
     android:id="@+id/settings"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="0dp"
+    app:layout_constraintTop_toBottomOf="@id/top_action_bar"
+    app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
