--- a/QRScanner/app/src/main/res/layout/top_action_bar.xml
+++ b/QRScanner/app/src/main/res/layout/top_action_bar.xml
@@ -1,29 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="@dimen/top_action_bar_height"
-  android:background="@drawable/top_action_bar_scrim"
+  android:background="@color/dark"
+  android:elevation="4dp"
   android:paddingStart="@dimen/top_action_bar_padding_horizontal"
   android:paddingEnd="@dimen/top_action_bar_padding_horizontal">
 
   <ImageView
-    android:id="@+id/close_button"
+    android:id="@+id/back_button"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="start"
     android:contentDescription="@string/cd_close_button"
     android:padding="@dimen/top_action_button_padding"
-    app:srcCompat="@drawable/ic_close_vd_white_24" />
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:srcCompat="@drawable/ic_baseline_arrow_back_white_24" />
 
   <ImageView
-    android:id="@+id/photo_library_button"
+    android:id="@+id/top_action_button"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_alignParentEnd="true"
     android:contentDescription="@string/cd_gallery_button"
     android:padding="@dimen/top_action_button_padding"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
     app:srcCompat="@drawable/ic_photo_library_vd_white_24" />
 
-</RelativeLayout>
+  <TextView
+    android:id="@+id/top_action_title"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/app_name"
+    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+    android:paddingStart="8dp"
+    android:paddingEnd="8dp"
+    app:layout_constraintStart_toEndOf="@id/back_button"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
