--- a/QRScanner/app/src/main/res/values/styles.xml
+++ b/QRScanner/app/src/main/res/values/styles.xml
@@ -10,15 +10,15 @@
         <item name="android:windowTranslucentStatus">true</item>
     </style>
 
-    <style name="OtherActivities" parent="Theme.MaterialComponents.Bridge">
+    <style name="OtherActivities" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="android:colorEdgeEffect">@color/colorAccent</item>
+    </style>
+
+    <style name="LicenceActivity" parent="Theme.MaterialComponents.Bridge">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
-    <style name="ImageScanningActivity" parent="Theme.MaterialComponents.NoActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="android:colorEdgeEffect">@color/colorAccent</item>
     </style>
 
 </resources>
