--- a/QRScanner/app/src/main/res/values/styles.xml
+++ b/QRScanner/app/src/main/res/values/styles.xml
@@ -10,8 +10,9 @@
         <item name="android:windowTranslucentStatus">true</item>
     </style>
 
-    <style name="OtherActivities" parent="Theme.MaterialComponents.NoActionBar">
+    <style name="OtherActivities" parent="Theme.MaterialComponents.NoActionBar.Bridge">
         <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorAccent</item>
         <item name="android:colorEdgeEffect">@color/colorAccent</item>
     </style>
 
