--- a/QRScanner/app/src/main/res/layout/activity_image_scanning.xml
+++ b/QRScanner/app/src/main/res/layout/activity_image_scanning.xml
@@ -3,8 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:background="@color/black">
+  android:layout_height="match_parent">
 
   <include
     layout="@layout/top_action_bar"
@@ -60,6 +59,12 @@
     android:text="@string/wait_for_decode"
     app:layout_anchor="@id/progressBar"
     app:layout_anchorGravity="bottom|center_horizontal" />
+
+  <ImageView
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/preview_card_carousel_height"
+    android:layout_gravity="bottom"
+    android:background="@drawable/bottom_action_bar_scrim" />
 
   <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/card_recycler_view"
