Minor UI/UX changes in top action bar

--- a/QRScanner/app/src/main/res/layout/top_action_bar.xml
+++ b/QRScanner/app/src/main/res/layout/top_action_bar.xml
@@ -15,6 +15,7 @@
     android:layout_height="wrap_content"
     android:contentDescription="@string/cd_close_button"
     android:padding="@dimen/top_action_button_padding"
+    android:background="?selectableItemBackgroundBorderless"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
@@ -26,6 +27,7 @@
     android:layout_height="wrap_content"
     android:contentDescription="@string/cd_gallery_button"
     android:padding="@dimen/top_action_button_padding"
+    android:background="?selectableItemBackgroundBorderless"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
