Fix a style issue where using non-opaque color as a primary color

--- a/QRScanner/app/src/main/res/layout/top_action_bar.xml
+++ b/QRScanner/app/src/main/res/layout/top_action_bar.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:id="@+id/top_action_bar_layout"
   android:layout_width="match_parent"
   android:layout_height="@dimen/top_action_bar_height"
   android:background="@color/dark"
