--- a/QRScanner/app/src/main/res/values/colors.xml
+++ b/QRScanner/app/src/main/res/values/colors.xml
@@ -5,9 +5,10 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorText">#F4F4F4</color>
     <color name="transparent">#00000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="black">#FF000000</color>
-    <color name="dark">#9A000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="dark">#212121</color>
+    <color name="dark_bg">#121212</color>
     <color name="reticle_ripple">#9AFFFFFF</color>
     <color name="barcode_reticle_background">#99000000</color>
     <color name="barcode_reticle_stroke">#40000000</color>
@@ -16,5 +17,5 @@
     <color name="lighter_grey">#DDDDDD</color>
     <color name="product_description">#5F6368</color>
     <color name="tracker_dot">#9403DAC5</color>
-    <color name="card_background_dark">#FF424242</color>
+    <color name="card_background_dark">#424242</color>
 </resources>
