--- a/QRScanner/app/src/main/res/drawable/bottom_action_bar_scrim.xml
+++ b/QRScanner/app/src/main/res/drawable/bottom_action_bar_scrim.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle" >
   <gradient
       android:angle="270"
-      android:startColor="@color/transparent"
+      android:startColor="@android:color/transparent"
       android:endColor="@color/black"
       android:type="linear" />
 </shape>
