Restore guide chip's opacity

--- a/QRScanner/app/src/main/res/layout/activity_image_scanning.xml
+++ b/QRScanner/app/src/main/res/layout/activity_image_scanning.xml
@@ -40,7 +40,7 @@
     android:textSize="@dimen/bottom_prompt_chip_text_size"
     android:visibility="gone"
     app:chipCornerRadius="@dimen/bottom_prompt_chip_corner_radius"
-    app:chipSurfaceColor="@color/dark"
+    app:chipSurfaceColor="@color/chip_bg"
     app:closeIconVisible="false" />
 
   <ProgressBar
