--- a/QRScanner/app/src/main/res/values/styles.xml
+++ b/QRScanner/app/src/main/res/values/styles.xml
@@ -18,7 +18,7 @@
     </style>
 
     <style name="LicenceActivity" parent="Theme.MaterialComponents.Bridge">
-        <item name="colorPrimary">@color/dark</item>
+        <item name="colorPrimary">@color/primary_dark</item>
         <item name="android:windowBackground">@color/dark_bg</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:colorEdgeEffect">@color/colorAccent</item>
