--- a/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
+++ b/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
@@ -15,12 +15,22 @@
     android:layout_height="@dimen/top_action_bar_height"
     app:layout_constraintTop_toTopOf="parent" />
 
+  <com.google.android.gms.ads.AdView
+    android:id="@+id/result_ad_view"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintTop_toBottomOf="@id/top_action_bar"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:adSize="BANNER"
+    app:adUnitId="ca-app-pub-5081530253339354/4806559849" />
+
   <TextView
     android:id="@+id/barcode_result"
     android:layout_width="0dp"
     android:layout_height="0dp"
     android:layout_marginStart="24dp"
-    android:layout_marginTop="16dp"
+    android:layout_marginTop="8dp"
     android:layout_marginEnd="24dp"
     android:layout_marginBottom="16dp"
     android:gravity="center"
@@ -32,7 +42,7 @@
     app:layout_constraintBottom_toTopOf="@id/ib_copy"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/top_action_bar" />
+    app:layout_constraintTop_toBottomOf="@id/result_ad_view" />
 
   <ImageButton
     android:id="@+id/ib_copy"
