--- a/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
+++ b/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
@@ -17,8 +17,8 @@
 
   <com.google.android.gms.ads.AdView
     android:id="@+id/result_ad_view"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="320dp"
+    android:layout_height="50dp"
     app:layout_constraintTop_toBottomOf="@id/top_action_bar"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
