--- a/QRScanner/app/src/main/res/layout/activity_scan_history.xml
+++ b/QRScanner/app/src/main/res/layout/activity_scan_history.xml
@@ -21,10 +21,10 @@
     android:layout_height="0dp"
     android:padding="8dp"
     android:scrollbars="vertical"
-    app:layout_constraintBottom_toTopOf="@+id/text_guide"
+    app:layout_constraintTop_toBottomOf="@+id/history_ad_view"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/top_action_bar"
+    app:layout_constraintBottom_toTopOf="@+id/text_guide"
     tools:listitem="@layout/recyclerview_item" />
 
   <TextView
@@ -35,17 +35,15 @@
     android:text="@string/delete_guide"
     android:textAlignment="center"
     android:textAppearance="@android:style/TextAppearance.Material.Small"
-    app:layout_constraintBottom_toTopOf="@id/history_ad_view"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/recyclerview" />
+    app:layout_constraintBottom_toBottomOf="parent" />
 
   <com.google.android.gms.ads.AdView
     android:id="@+id/history_ad_view"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:layout_constraintTop_toBottomOf="@id/text_guide"
-    app:layout_constraintBottom_toBottomOf="parent"
+    android:layout_width="320dp"
+    android:layout_height="50dp"
+    app:layout_constraintTop_toBottomOf="@id/top_action_bar"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:adSize="BANNER"
