--- a/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
+++ b/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
@@ -15,15 +15,14 @@
     android:layout_height="@dimen/top_action_bar_height"
     app:layout_constraintTop_toTopOf="parent" />
 
-  <com.google.android.gms.ads.AdView
-    android:id="@+id/result_ad_view"
+  <include
+    android:id="@+id/ad_view"
+    layout="@layout/ad_container"
     android:layout_width="320dp"
     android:layout_height="50dp"
     app:layout_constraintTop_toBottomOf="@id/top_action_bar"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:adSize="BANNER"
-    app:adUnitId="ca-app-pub-5081530253339354/4806559849" />
+    app:layout_constraintStart_toStartOf="parent" />
 
   <TextView
     android:id="@+id/barcode_result"
@@ -42,7 +41,7 @@
     app:layout_constraintBottom_toTopOf="@id/ib_copy"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/result_ad_view" />
+    app:layout_constraintTop_toBottomOf="@id/ad_view" />
 
   <ImageButton
     android:id="@+id/ib_copy"
