--- a/QRScanner/app/src/main/res/layout/activity_scan_history.xml
+++ b/QRScanner/app/src/main/res/layout/activity_scan_history.xml
@@ -21,7 +21,7 @@
     android:layout_height="0dp"
     android:padding="8dp"
     android:scrollbars="vertical"
-    app:layout_constraintTop_toBottomOf="@+id/history_ad_view"
+    app:layout_constraintTop_toBottomOf="@+id/ad_view"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintBottom_toTopOf="@+id/text_guide"
@@ -39,14 +39,13 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintBottom_toBottomOf="parent" />
 
-  <com.google.android.gms.ads.AdView
-    android:id="@+id/history_ad_view"
+  <include
+    android:id="@+id/ad_view"
+    layout="@layout/ad_container"
     android:layout_width="320dp"
     android:layout_height="50dp"
     app:layout_constraintTop_toBottomOf="@id/top_action_bar"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:adSize="BANNER"
-    app:adUnitId="ca-app-pub-5081530253339354/9924947161" />
+    app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
