Revert "Remove ads implementations"
This reverts commit 6799a3c7c4a2b3f370521442063ae9f0c6d730f4.

--- a/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
+++ b/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
@@ -15,6 +15,15 @@
     android:layout_height="@dimen/top_action_bar_height"
     app:layout_constraintTop_toTopOf="parent" />
 
+  <include
+    android:id="@+id/ad_view"
+    layout="@layout/ad_container"
+    android:layout_width="320dp"
+    android:layout_height="50dp"
+    app:layout_constraintTop_toBottomOf="@id/top_action_bar"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent" />
+
   <TextView
     android:id="@+id/barcode_result"
     android:layout_width="0dp"
@@ -32,7 +41,7 @@
     app:layout_constraintBottom_toTopOf="@id/ib_copy"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/top_action_bar" />
+    app:layout_constraintTop_toBottomOf="@id/ad_view" />
 
   <ImageButton
     android:id="@+id/ib_copy"
